--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,14 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.5",
+    "@nextui-org/button": "^2.0.38",
+    "@nextui-org/calendar": "^2.0.12",
+    "@nextui-org/react": "^2.4.8",
+    "@nextui-org/system": "^2.2.6",
+    "@nextui-org/theme": "^2.2.11",
     "@tailwindcss/forms": "^0.5.9",
     "axios": "^1.7.7",
+    "framer-motion": "^11.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0"
